# sumo_optimise_x-ing

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  sumo_out.txt
.serena/: project.yml
.serena/memories/: demand_personflow_spec.md  minor_endpoint_side_mapping.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
data/legacy(v1.2)/: plainXML_converter_0927_1.2.11.py  schema_v1.2_sample.json
data/reference/: DemandPerEdge_Prototype.csv  DemandPerEndpoint.csv  DemandPerEndpoint_SampleUpdated.csv  JunctionDirectionRatio.csv  JunctionDirectionRatio_Prototype.csv  JunctionDirectionRatio_SampleUpdated.csv  SUMO_OPTX.json  SUMO_OPTX_demo_1.json  SUMO_OPTX_demo_1_conflict.json  SUMO_OPTX_demo_2.json  SUMO_OPTX_demo_3.json  SUMO_OPTX_v1.3_sample.json  SUMO_OPTX_v1.3_sample_updated.json  ped_EP_demand_sampleUpd.csv  ped_jct_turn_weight_sampleUpd.csv  schema_v1.3_sample.json  small_demo_1.json  small_demo_1_conflict.json  small_demo_2.json  small_demo_2_conflict.json  small_demo_3.json  small_demo_3_conflict.json  small_demo_4.json  small_demo_4_conflict.json  small_sample-doubleT.json  small_sample.json  veh_EP_demand_sampleUpd.csv  veh_jct_turn_weight_sampleUpd.csv  vehicle_demand_example.rou.xml  干渉一覧.csv  干渉一覧.xlsx
data/sample_updated/: SUMO_OPTX_v1.3_sample_updated.json  SUMO_OPTX_v1.4_sample_updated.json  ped_EP_demand_sampleUpd.csv  veh_EP_demand_sampleUpd.csv  veh_jct_turn_weight_sampleUpd.csv
docs/: demand_personflow_spec.md
tests/: test_pipeline.py  test_plainxml_parity.py
(+218 files in other folders)
