[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corridor-pipeline"
version = "0.3.0"
description = "Modular SUMO corridor PlainXML converter"
authors = [{name = "Auto Generated"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
